Temporary fix the layout issue (remove the font-size).

--- a/src/app/site/sass/_site_common.scss
+++ b/src/app/site/sass/_site_common.scss
@@ -1,7 +1,6 @@
 .site__container {
   text-align: center;
-  padding: 50px;
-  font-size: 18px;
+  padding: 30px 0;
 
   h1 {
     margin: 0;
@@ -15,6 +14,6 @@
 }
 
 .site__container__section {
-  @include outer-container();
+  @include outer-container;
   margin-top: 0;
 }
